--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -14,12 +14,15 @@
   <div class="columns is-multiline">
     <div
       *ngIf="state && firmware"
-      class="column is-12-mobile is-10-desktop is-offset-1-desktop is-8-widescreen is-offset-2-widescreen">
-      <app-state-display [state]="state"
-                         [firmware]="firmware"
-                         (onOffToggle)="onOffToggle()"
-                         (dimmerSave)="onDimmerChanged($event)"
-                         (onTimeReset)="onOnTimeReset()"></app-state-display>
+      class="column is-12-mobile is-10-desktop is-offset-1-desktop is-8-widescreen is-offset-2-widescreen"
+    >
+      <app-state-display
+        [state]="state"
+        [firmware]="firmware"
+        (onOffToggle)="onOffToggle()"
+        (dimmerSave)="onDimmerChanged($event)"
+        (onTimeReset)="onOnTimeReset()"
+      ></app-state-display>
     </div>
   </div>
 </div>
