--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -6,11 +6,12 @@
 }
 
 .hero.welcome.is-info {
-  background: #36D1DC;
-  background: -webkit-linear-gradient(to right, #5B86E5, #36D1DC);
-  background:         linear-gradient(to right, #5B86E5, #36D1DC);
+  background: #36d1dc;
+  background: -webkit-linear-gradient(to right, #5b86e5, #36d1dc);
+  background: linear-gradient(to right, #5b86e5, #36d1dc);
 }
 
-.hero.welcome .title, .hero.welcome .subtitle {
+.hero.welcome .title,
+.hero.welcome .subtitle {
   color: hsl(192, 17%, 99%);
 }
