Refactor webapp to modern Angular style
The app was small enough to make almost complete overhaul. Most of its
setup matches the way brand new Angular project looks like (from calling
"ng new").

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -12,13 +12,13 @@
     </div>
   </div>
   <div class="columns is-multiline">
-    @if (state && firmware) {
+    @if (isStateReady()) {
     <div
       class="column is-12-mobile is-10-desktop is-offset-1-desktop is-8-widescreen is-offset-2-widescreen"
     >
       <app-state-display
-        [state]="state"
-        [firmware]="firmware"
+        [state]="state()!"
+        [firmware]="firmware()!"
         (onOffToggle)="onOffToggle()"
         (dimmerSave)="onDimmerChanged($event)"
         (onTimeReset)="onOnTimeReset()"
