--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "bulma";
+@use "bulma";
 
 html, body {
   font-family: sans-serif, serif;
