--- a/webapp/src/app/shared/components/state-display/state-display.component.html
+++ b/webapp/src/app/shared/components/state-display/state-display.component.html
@@ -41,9 +41,10 @@
             <td><code>/3311/0/5850</code></td>
             <td>
               @if (state.on) {
-              <span class="tag is-primary">On</span>
-              } @if (!state.on) {
-              <span class="tag is-danger">Off</span>
+                <span class="tag is-primary">On</span>
+              }
+              @if (!state.on) {
+                <span class="tag is-danger">Off</span>
               }
             </td>
             <td class="has-text-right">
